--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
 
     <div class="capa">
-      <img src="./erod.png" alt="Capa do site" />
+      <img src="./Back-End/erod.png" alt="Capa do site" />
     </div>
 
     <h1>Formulário de Inscrição - Congresso DeMolay</h1>
