--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="description" content="Formulário de Inscrção - Encontro Regional da Ordem DeMolay">
     <title>Xº EROD</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Back-End/styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
   <div class="container">
 
     <div class="capa">
-      <img src="./Back-End/erod.png" alt="Capa do site" />
+      <img src="./erod.png" alt="Capa do site" />
     </div>
 
     <h1>Formulário de Inscrição - Congresso DeMolay</h1>
