--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+
   <header class="hero">
-    <h1>Portifólio - Kauan Pedreira</h1>
-    <p>Disciplina de Desenvolvimento Web Back-End</p>
-  </header>
+  <h1>Back-End - Kauan Pedreira</h1>
+  <p>Bem-vindo ao meu portfólio! Aqui você encontrará projetos e atividades da matéria de Web Back-End.</p>
+  
+  <div class="profile-container">
+    <img src="minhafoto.jpg" alt="Kauan Pedreira">
+  </div>
+</header>
 
   <main class="container">
     <section class="sobre">
